--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,19 +1,26 @@
 version: 2
 updates:
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "chore(deps[pip])"
+    - package-ecosystem: 'pip'
+      directory: '/'
+      schedule:
+          interval: 'weekly'
+      commit-message:
+          prefix: 'chore(deps[pip])'
 
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    ignore:
-      - dependency-name: "dependabot.yml"
-      - dependency-name: "codecov/codecov-action"
-        versions: ["4.x"]
-    commit-message:
-      prefix: "chore(deps[github-actions])"
+    - package-ecosystem: 'github-actions'
+      directory: '/'
+      schedule:
+          interval: 'weekly'
+      ignore:
+          - dependency-name: 'dependabot.yml'
+          - dependency-name: 'codecov/codecov-action'
+            versions: ['4.x']
+      commit-message:
+          prefix: 'chore(deps[github-actions])'
+
+    - package-ecosystem: 'npm'
+      directory: '/'
+      schedule:
+          interval: 'weekly'
+      commit-message:
+          prefix: 'chore(deps[node])'
