--- a/config/config.json
+++ b/config/config.json
@@ -23,7 +23,12 @@
         },
         "pacman": {
             "update_cmd": "pacman -Syu --noconfirm",
-            "install_cmd": "pacman -Syu --noconfirm --needed"
+            "install_cmd": "pacman -Syu --noconfirm --needed",
+            "post_install_commands": [
+                "pacman -Syu --noconfirm pacman-contrib --noconfirm --needed",
+                "systemctl enable paccache.timer",
+                "systemctl start paccache.timer"
+            ]
         },
         "brew": {
             "update_cmd": "brew update",
