--- a/config/config.json
+++ b/config/config.json
@@ -23,12 +23,7 @@
         },
         "pacman": {
             "update_cmd": "pacman -Syu --noconfirm",
-            "install_cmd": "pacman -Syu --noconfirm --needed",
-            "post_install_commands": [
-                "pacman -Syu --noconfirm pacman-contrib --noconfirm --needed",
-                "systemctl enable paccache.timer",
-                "systemctl start paccache.timer"
-            ]
+            "install_cmd": "pacman -Syu --noconfirm --needed"
         },
         "brew": {
             "update_cmd": "brew update",
