fix(config/go): install go tools directly over Mason plugins

--- a/config/config.json
+++ b/config/config.json
@@ -175,23 +175,11 @@
                     "go"
                 ]
             },
-            "lsps": [
-                "gopls"
-            ],
             "daps": [
                 "go-debug-adapter"
             ],
-            "linters": [
-                "golangci-lint",
-                "staticcheck",
-                "revive"
-            ],
             "formatters": [
-                "goimports-reviser",
-                "golines",
-                "gomodifytags",
-                "gotests",
-                "impl"
+                "gotests"
             ],
             "custom_script": "golang.sh"
         },
