fix(neovim/config): add gopls to go profile LSPS

--- a/config/config.json
+++ b/config/config.json
@@ -175,6 +175,9 @@
                     "go"
                 ]
             },
+            "lsps": [
+                "gopls"
+            ],
             "daps": [
                 "go-debug-adapter"
             ],
