--- a/tests/test_project/fedora/.devcontainer/Dockerfile
+++ b/tests/test_project/fedora/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 FROM fedora:latest
 
 # Install dependencies
-RUN dnf install -y zsh curl make git gdb gcc jq glibc-all-langpacks procps-ng
+RUN dnf install -y zsh curl make git jq
