--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
       schedule:
           interval: 'weekly'
       commit-message:
-          prefix: 'chore(deps[pip])'
+          prefix: 'chore(deps/pip)'
 
     - package-ecosystem: 'github-actions'
       directory: '/'
@@ -16,11 +16,11 @@ updates:
           - dependency-name: 'codecov/codecov-action'
             versions: ['4.x']
       commit-message:
-          prefix: 'chore(deps[github-actions])'
+          prefix: 'chore(deps/github-actions)'
 
     - package-ecosystem: 'npm'
       directory: '/'
       schedule:
           interval: 'weekly'
       commit-message:
-          prefix: 'chore(deps[node])'
+          prefix: 'chore(deps/node)'
