--- a/config/config.json
+++ b/config/config.json
@@ -42,7 +42,8 @@
         ".zshrc",
         ".p10k.zsh",
         ".config/nvim",
-        ".tmux.conf"
+        ".tmux.conf",
+        ".cobra.yaml"
     ],
     "ohmyzsh_plugins": {
         "zsh-syntax-highlighting": "https://github.com/zsh-users/zsh-syntax-highlighting.git",
