chore(config/arch): Add 'neofetch' to the list of dependencies in config.json

--- a/config/config.json
+++ b/config/config.json
@@ -71,7 +71,8 @@
             "python-pip",
             "gdb",
             "gcc",
-            "procps-ng"
+            "procps-ng",
+            "neofetch"
         ],
         "debian": [
             "lua5.4",
