chore: Remove neofetch from config.json [skip ci]

--- a/config/config.json
+++ b/config/config.json
@@ -72,8 +72,7 @@
             "gdb",
             "gcc",
             "procps-ng",
-            "fzf",
-            "neofetch"
+            "fzf"
         ],
         "debian": [
             "lua5.4",
