chore(config/archlinux): Add `wl-clipboard` dependency [skip ci]

--- a/config/config.json
+++ b/config/config.json
@@ -72,7 +72,8 @@
             "gdb",
             "gcc",
             "procps-ng",
-            "fzf"
+            "fzf",
+            "wl-clipboard"
         ],
         "debian": [
             "lua5.4",
