--- a/config/config.json
+++ b/config/config.json
@@ -69,7 +69,7 @@
             "gcc",
             "procps-ng",
             "fzf",
-            "wl-clipboard"
+            "wl-clipboard",
             "fastfetch"
         ],
         "debian": [
